# stringdb_analysis

./: .gitignore  README.md  cli_config.toml  config.toml  example_string_interactions.tsv  example_string_interactions2.tsv  example_string_interactions_short1.tsv  example_string_interactions_short2.tsv  genes copy.txt  genes.txt  pyproject.toml  run.sh  string_interactions.tsv  string_interactions_short.tsv  test.py
src/py_script_template/: __init__ copy.py  __init__.py  __main__.py  cache.py  config.py  provider.py  utils.py
