[project]
name = "stringdb_analysis"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "VentCat", email = "2546650292@qq.com" }]
dependencies = [
    "toml>=0.10.2",
    "pydantic>=2.7.2",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "polars>=0.20.31",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "py_script_template:main"

[tool.rye.scripts]
dev = "rye run main --input './genes2.txt' --save_dir './result'"

[tool.rye]
managed = true
dev-dependencies = []
sources = [
    { name = "tsinghua", url = "https://pypi.tuna.tsinghua.edu.cn/simple" },
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_script_template"]
